profile fix, scrollbar fix

--- a/src/components/cards/Participant/index.module.scss
+++ b/src/components/cards/Participant/index.module.scss
@@ -16,6 +16,8 @@
     }
     div {
         @include flex;
+        cursor: pointer;
+        align-items: center;
         p {
             @include heading-m;
             margin-left: 4px;
