--- a/src/components/tabModule/Tab.module.scss
+++ b/src/components/tabModule/Tab.module.scss
@@ -17,7 +17,13 @@
 
 .tabList {
   display: flex;
-  overflow: auto;
+  overflow: hidden;
+  &:hover,
+  &:active,
+  &:focus {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
   @include highlight-background;
 }
 
