--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -1,25 +1,33 @@
 @import "icomoon.css";
+@import "@css/layouts/container.scss";
 
+/* vietnamese */
 @font-face {
-  font-family: "Muli";
+  font-family: 'Mulish';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Muli"), url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afTLGLQjUwkQ.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/mulish/v3/1Ptyg83HX_SGhgqO0yLcmjzUAuWexZNR8aivHZ47LTdNwPak.woff) format('woff');
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
 }
-
+/* latin-ext */
 @font-face {
-  font-family: "Muli";
+  font-family: 'Mulish';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   font-display: swap;
-  src: local("Muli"), url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afTLGLQjUwkQ.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/mulish/v3/1Ptyg83HX_SGhgqO0yLcmjzUAuWexZNR8amvHZ47LTdNwPak.woff) format('woff');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
-
+/* latin */
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v3/1Ptyg83HX_SGhgqO0yLcmjzUAuWexZNR8aevHZ47LTdNwA.woff) format('woff');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 html {
   margin: 0;
   padding: 0;
@@ -83,26 +91,24 @@ h3 {
   background: #fff;
   color: #000;
 
-::-webkit-scrollbar-track {
-  background: none;
-  &:hover {
-    background: #f1f1f1;
+  ::-webkit-scrollbar-track {
+    background: none;
+    &:hover {
+      background: #f1f1f1;
+    }
   }
-}
-
 }
 
 .dark {
   background: #121212;
   color: white;
 
-::-webkit-scrollbar-track {
-  background: none;
-  &:hover {
-    background: #010101;
+  ::-webkit-scrollbar-track {
+    background: none;
+    &:hover {
+      background: #010101;
+    }
   }
-}
-
 }
 
 a {
@@ -178,16 +184,22 @@ button:focus {
 }
 
 html {
-  // scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch; /*!overflow-x: hidden;*/
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 body {
   font-family: Muli, Lato, sans-serif;
   -webkit-text-size-adjust: 100%;
-  // scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch; /*!overflow-x: hidden;*/
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
   word-wrap: break-word;
   font-weight: normal;
+  overflow: hidden;
+  &:hover,
+  &:active,
+  &:focus {
+    overflow: auto;
+  }
 }
 
 input[type="Reset"],
@@ -214,14 +226,15 @@ img {
   }
 }
 
-// ::-webkit-scrollbar {
-//   width: 8px;
-// }
-// ::-webkit-scrollbar-thumb {
-//   background: #8e4d99aa;
-//   border-radius: 8px;
-// }
-
-// ::-webkit-scrollbar-thumb:hover {
-//   background: #8e4d99;
-// }
+::-webkit-scrollbar {
+  height: 4px;
+  width: 4px;
+  @include default-background;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #8e4d9988;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+  @include default-background;
+}
