--- a/src/css/components/buttons.scss
+++ b/src/css/components/buttons.scss
@@ -75,7 +75,7 @@
         font-size: map-get($breakpoint-font-size, $variant);
         width: calc(100%);
     }
-    font-family: "Muli";
+    font-family: "Mulish";
     text-transform: uppercase;
     border-radius: 8px;
     font-weight: bold;
